[gd_scene load_steps=9 format=3 uid="uid://dx2fcqqpb4i4s"]

[ext_resource type="PackedScene" uid="uid://bl508xnjg7w4d" path="res://scenes/platform.tscn" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://ehmcsd6vtsfn" path="res://scripts/main.gd" id="1_tbgi4"]
[ext_resource type="PackedScene" uid="uid://dcxvd8sk8dsio" path="res://scenes/player.tscn" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://dj3ndy0nb2o47" path="res://scenes/door.tscn" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://dwgryqf8rcart" path="res://scenes/key.tscn" id="4_jyhfs"]
[ext_resource type="PackedScene" uid="uid://b3wdwr05px4a6" path="res://scenes/enemy_b.tscn" id="6_tefeu"]
[ext_resource type="PackedScene" uid="uid://b2vxoac7rukid" path="res://scenes/gem.tscn" id="7_o6xl0"]
[ext_resource type="PackedScene" uid="uid://ub7pcmbtaeob" path="res://scenes/enemya.tscn" id="8_tipki"]

[node name="Main" type="Node2D"]
script = ExtResource("1_tbgi4")

[node name="Door" parent="." instance=ExtResource("3_sugp2")]
position = Vector2(590, 146)

[node name="Key" parent="." instance=ExtResource("4_jyhfs")]
position = Vector2(818, 569)

[node name="Player" parent="." instance=ExtResource("2_sugp2")]
position = Vector2(72, 430)
jump_velocity = -600.0

[node name="World" type="Node2D" parent="."]

[node name="Platform" parent="World" instance=ExtResource("1_0wfyh")]
position = Vector2(187, 495)
scale = Vector2(8.13, 1)

[node name="Platform5" parent="World" instance=ExtResource("1_0wfyh")]
position = Vector2(585, 672)
scale = Vector2(8.13, 1)

[node name="Platform2" parent="World" instance=ExtResource("1_0wfyh")]
position = Vector2(972, 489)
scale = Vector2(8.13, 1)

[node name="Platform3" parent="World" instance=ExtResource("1_0wfyh")]
position = Vector2(1215, 304)
scale = Vector2(8.13, 1)

[node name="Platform6" parent="World" instance=ExtResource("1_0wfyh")]
position = Vector2(-74, 304)
scale = Vector2(8.13, 1)

[node name="Platform4" parent="World" instance=ExtResource("1_0wfyh")]
position = Vector2(591, 180)
scale = Vector2(8.13, 1)

[node name="EnemyB" parent="." instance=ExtResource("6_tefeu")]
position = Vector2(437, 286)

[node name="EnemyB4" parent="." instance=ExtResource("6_tefeu")]
position = Vector2(766, 286)

[node name="EnemyB2" parent="." instance=ExtResource("6_tefeu")]
position = Vector2(1097, 56)

[node name="EnemyB3" parent="." instance=ExtResource("6_tefeu")]
position = Vector2(65, 56)

[node name="HpLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 1043.0
offset_top = 4.0
offset_right = 1083.0
offset_bottom = 27.0

[node name="Gem" parent="." instance=ExtResource("7_o6xl0")]
position = Vector2(1110, 388)

[node name="EnemyA" parent="." instance=ExtResource("8_tipki")]
position = Vector2(585, 639)
